Code format and optimized imports